--- a/src/App.css
+++ b/src/App.css
@@ -64,8 +64,15 @@ label {
 }
 select {
     padding: 0.5rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0.2rem;
     width: 100%;
     border: 1px solid #ccc;
+    border-radius: 5px;
+}
+input[type="url"] {
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+    width: 100%;
+    border: 1px solid #c2c2c2;
     border-radius: 5px;
 }
